--- a/CL.html
+++ b/CL.html
@@ -15,7 +15,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 <style type="text/css">
 body {
-        background-color: #3f3f3f;
+        background-color: #bebebe;
         color: #bebebe;
 		font-family: 'Istok Web', Arial, sans-serif;
 		font-size: 11px; 
@@ -26,7 +26,7 @@ body {
 
 a:link, a:active, a:visited { 
 		text-decoration: none;
-		color: {color:#bebebe};
+		color: {color:#00deff};
 		
 }
 a:hover { 
